--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>Omii Chen - Artist's page</title>
     <meta charset="utf-8">
+    <style>
+      html {
+        background: black;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <header>
